# action-model

./: Makefile  docker-compose.yaml  nginx.conf  pyproject.toml  run_code_executor.py
containers/: Dockerfile  Dockerfile-Code  Dockerfile-Selenium
notebooks/: helloworld.ipynb  scratch.ipynb
src/code_executor/: code_executor.py
